# UHPSampleCode

./: .gitattributes  README.md
.github/workflows/: engines_cpp_ci.yml  engines_cpp_pr.yml  engines_cs_ci.yml  engines_cs_pr.yml
engines/cpp/: CMakeLists.txt  README.md
engines/cpp/include/: Board.h  Constants.h  Engine.h  Enums.h  Move.h  MoveSet.h  Position.h  PositionSet.h
engines/cpp/src/: Board.cpp  Engine.cpp  Enums.cpp  Move.cpp  Position.cpp  main.cpp
engines/cs/: README.md
engines/cs/src/: Board.cs  Constants.cs  Engine.cs  Enums.cs  Move.cs  MoveSet.cs  Position.cs  PositionSet.cs  Program.cs
